# fight

./: .clang-format  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
arena/src/: Makefile  Makefile.am  Makefile.in  arena  arena.cpp  main.cpp  screen.cpp
arena/src/.deps/: arena-arena.Po  arena-main.Po  arena-screen.Po  main.Tpo
arena/src/headers/: arena.h  screen.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
bot/teixeirinha/: Makefile.am
bots/teixeirinha/: Makefile  Makefile.am  Makefile.in  libteixeirinha.la  libteixeirinha_la-teix_robot.lo  libteixeirinha_la-teixeirinha.lo  teix_robot.cpp  teix_robot.h  teixeirinha.cpp
bots/teixeirinha/.deps/: libteixeirinha_la-teix_robot.Plo  libteixeirinha_la-teixeirinha.Plo
bots/teixeirinha/.libs/: libteixeirinha.la  libteixeirinha.lai  libteixeirinha.so.0.0.0
libRobot/public_headers/: arm.h  attributes.h  bonus.h  robot.h
libRobot/public_headers/arm/: samurai_arm.h
libRobot/public_headers/arm_parts/: arm_part.h  samurai_sword_sword.h
libRobot/public_headers/land/: armor_piece.h  build_repair_station.h
libRobot/src/: Makefile  Makefile.am  Makefile.in  robot.cpp
libRobot/src/.deps/: libRobot_a-robot.Po
