AC_INIT([arena], [1.0], [fateixeira@criticalsoftware.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AM_PROG_AR
LT_INIT
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
	Makefile
	libRobot/src/Makefile
	arena/src/Makefile
	bots/teixeirinha/Makefile
])
AC_OUTPUT